; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_script_enable_messages.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_script_enable_messages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.script_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_enable_messages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_enable_messages(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.script_ctx*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.script_ctx* @get_ctx(i32* %5)
  store %struct.script_ctx* %6, %struct.script_ctx** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @check_loglevel(i32* %7, i32 1)
  %9 = load i32*, i32** %2, align 8
  %10 = call i8* @luaL_checkstring(i32* %9, i32 1)
  store i8* %10, i8** %4, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load %struct.script_ctx*, %struct.script_ctx** %3, align 8
  %13 = getelementptr inbounds %struct.script_ctx, %struct.script_ctx* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @mpv_request_log_messages(i32 %14, i8* %15)
  %17 = call i32 @check_error(i32* %11, i32 %16)
  ret i32 %17
}

declare dso_local %struct.script_ctx* @get_ctx(i32*) #1

declare dso_local i32 @check_loglevel(i32*, i32) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @check_error(i32*, i32) #1

declare dso_local i32 @mpv_request_log_messages(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
